--- a/dockerX/docker-compose-local.yml
+++ b/dockerX/docker-compose-local.yml
@@ -7,17 +7,20 @@ networks:
 volumes:
   postgres-data:
     driver: local
+  redis-data:
+    driver: local
   portainer-data:
     driver: local
 
 services:
 
   todo:
+    image: ${PYTHON_IMAGE}
     build:
       context: ../
       dockerfile: dockerX/todo/Dockerfile.local
       args:
-         IMAGE: "python:3.7.1"
+         IMAGE: ${PYTHON_IMAGE}
     restart: on-failure
     env_file:
       - todo/develop.env
@@ -25,22 +28,50 @@ services:
       - 8000:8000
     volumes:
       - ../todo:/usr/src/todo/
+      - ./todo:/usr/src/scripts/
       - /opt/pycharm-2018.1.3/debug-eggs/:/usr/src/pycharm/debug-eggs/
     depends_on:
       - postgres
+      - redis
+    networks:
+      - network
+
+  worker:
+    image: ${PYTHON_IMAGE}
+    command: >
+      sh -c "cd /usr/src/todo/ &&
+            pip install -r requirements.txt &&
+            /usr/local/bin/celery -A todo worker -l DEBUG -c 1 -Q celery-general -n celery-general"
+    restart: on-failure
+    env_file:
+      - todo/develop.env
+    volumes:
+      - ../todo:/usr/src/todo/
+      - /opt/pycharm-2018.1.3/debug-eggs/:/usr/src/pycharm/debug-eggs/
+    depends_on:
+      - postgres
+      - redis
+      - todo
     networks:
       - network
 
   postgres:
-    image: "postgres:11.1-alpine"
-    ports:
-      - 8998:5432
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+    image: ${POSTGRES_IMAGE}
     environment:
       - POSTGRES_USER=todo_user
       - POSTGRES_PASSWORD=wVlIie718fkg
       - POSTGRES_DB=todo_database
+    ports:
+      - 8998:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - network
+
+  redis:
+    image: ${REDIS_IMAGE}
+    volumes:
+      - redis-data:/data
     networks:
       - network
 
@@ -51,5 +82,26 @@ services:
       - portainer-data:/data
     ports:
       - "8897:9000"
+    networks:
+      - network
+
+  flower:
+    image: ${PYTHON_IMAGE}
+    command: >
+      sh -c "cd /usr/src/todo/ &&
+            pip install -r requirements.txt &&
+            /usr/local/bin/celery flower -A todo --address=0.0.0.0 --port=5555 --broker=redis://redis:6379/1"
+    restart: on-failure
+    env_file:
+      - todo/develop.env
+    ports:
+      - 5555:5555
+    volumes:
+      - ../todo:/usr/src/todo/
+      - /opt/pycharm-2018.1.3/debug-eggs/:/usr/src/pycharm/debug-eggs/
+    depends_on:
+      - postgres
+      - redis
+      - todo
     networks:
       - network
