--- a/dockerX/todo/develop.env
+++ b/dockerX/todo/develop.env
@@ -14,6 +14,14 @@ DATABASE_PASSWORD=wVlIie718fkg
 DATABASE_HOST=postgres
 DATABASE_PORT=5432
 
+# email
+EMAIL_HOST_USER=test
+EMAIL_HOST_PASSWORD=test
+
+# redis / celery
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/2
+
 # admin user
 SYSTEM_EMAIL=system@gmail.com
 SYSTEM_PASSWORD=programming
